--- a/checkpoint/PoseAug_result_summary.ipynb
+++ b/checkpoint/PoseAug_result_summary.ipynb
@@ -201,12 +201,12 @@
     "        print('now work on: ', dataset_name, model_name)\n",
     "        if not model_name in rlt_summary[dataset_name]:\n",
     "            rlt_summary[dataset_name][model_name] = {}\n",
-    "        # 从file list中提取目标path\n",
+    "        # extract file list from path\n",
     "        rlt_summary[dataset_name][model_name]['event_path']=get_eventpath_byDM(path_lst_to_events_file\n",
     "                                                                             , dataset_name, model_name)\n",
     "        \n",
     "        for tag_key in tag_keylst:\n",
-    "            # 根据每个tag_key 把数据提取出来\n",
+    "            # get data from tag_key\n",
     "            tmp_tag = tag_dict[tag_key]\n",
     "            tmp_log = get_log(rlt_summary[dataset_name][model_name]['event_path'], tmp_tag)\n",
     "            rlt_summary[dataset_name][model_name][tag_key] = tmp_log[tmp_tag]\n",
@@ -736,6 +736,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
